# basaltic

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  basaltic_characters.c  basaltic_characters.h  basaltic_commandBuffer.c  basaltic_commandQueue.c  basaltic_commandQueue.h  basaltic_defs.h  basaltic_editor.c  basaltic_editor.h  basaltic_editor_base.c  basaltic_editor_base.h  basaltic_interaction.c  basaltic_interaction.h  basaltic_logic.c  basaltic_logic.h  basaltic_logicInputState.c  basaltic_logicInputState.h  basaltic_super.c  basaltic_super.h  basaltic_super_window.h  basaltic_uiState.c  basaltic_uiState.h  basaltic_window.c  basaltic_window.h  basaltic_worldState.h  build.zig  build.zig.zon  ccVector.h  clangd.zig  compile_commands.json  credits.md  credits.txt  kingdom.kdev4  kingdom_characters.c  kingdom_characters.h  kingdom_defs.h  (+12 more)
.cache/clangd/index/: ccVector.h.E400D19256A77540.idx  cimgui.h.3369078342C50083.idx  kingdom_characters.c.E216EF2ABE1BD08A.idx  kingdom_characters.h.099EE572C6C67890.idx  kingdom_defs.h.0513BF08E114B31E.idx  kingdom_interaction.c.4B28219B8F49719C.idx  kingdom_interaction.h.4D14DDE3AA6F6A8A.idx  kingdom_logic.c.5AC53DF471162293.idx  kingdom_logic.h.CC8A5DB1C0BF32A2.idx  kingdom_logicInputState.c.9CBED6C1FFFE86D3.idx  kingdom_logicInputState.h.3C0E859EA36AA288.idx  kingdom_uiState.c.4505A5D1EFF71B7D.idx  (+6 more)
cimgui/: cimgui_impl.h
include/: basaltic_defs.h  basaltic_window.h
libs/: flecs.c  flecs.h
libs/argparse-zig/: build.zig  build.zig.zon
libs/cimgui-zig/: build.zig  build.zig.zon
libs/htw-libs/: .gitignore  CMakeLists.txt  htw_core.h  htw_core_collections.c  htw_core_math.c  htw_geomap.h  htw_geomap_chunkmap.c  htw_geomap_generators.c  htw_geomap_hexgrid.c  htw_geomap_spatialStorage.c  htw_geomap_tilemap.c  htw_geomap_tiles.c  htw_geomap_valuemap.c  htw_multimap.h  htw_random.h  htw_vulkan.c  htw_vulkan.h
libs/licenses/: xxhash.txt
model/: CMakeLists.txt  basaltic_characters.c  basaltic_characters.h  basaltic_logic.c  basaltic_logic.h  basaltic_model.c  basaltic_model.h  basaltic_worldGen.c  basaltic_worldGen.h  basaltic_worldState.h
model/ecs/: CMakeLists.txt  basaltic_components.c  basaltic_components.h  basaltic_phases.c  basaltic_phases.h  basaltic_systems.c  basaltic_systems.h  flecs.c  flecs.h
model/ecs/components/: CMakeLists.txt  basaltic_components_actors.c  basaltic_components_actors.h  basaltic_components_planes.c  basaltic_components_planes.h  basaltic_components_wildlife.c  basaltic_components_wildlife.h  basaltic_terrain.h
model/ecs/systems/: CMakeLists.txt  basaltic_character_systems.c  basaltic_character_systems.h  basaltic_terrain_systems.c  basaltic_terrain_systems.h
resources/: cell_types
shaders/: debug.frag  hexTerrain.frag  hexTerrain.vert  hexagon.vert  recompile_shaders.sh  text.frag  text.vert  uniforms.h
shaders_source/: CMakeLists.txt  compile_shaders.sh  debug.frag  debug.vert  hexTerrain.frag  hexTerrain.vert  hexagon.frag  text.frag  uniforms.h
src/: CMakeLists.txt  basaltic_commandBuffer.c  basaltic_editor_base.c  basaltic_editor_base.h  basaltic_super.c  basaltic_super.h  basaltic_super_window.h  basaltic_window.c  bc_flecs_utils.c  main.c
src/include/: basaltic_commandBuffer.h  basaltic_defs.h  basaltic_window.h  bc_flecs_utils.h  bc_sdl_utils.h
src/model/: CMakeLists.txt  basaltic_logic.c  basaltic_logic.h  basaltic_model.c  basaltic_model.h  basaltic_worldGen.c  basaltic_worldGen.h  basaltic_worldState.h  readme.md
src/model/ecs/: CMakeLists.txt  basaltic_components.c  basaltic_components.h  basaltic_phases.c  basaltic_phases.h  basaltic_systems.c  basaltic_systems.h
src/model/ecs/components/: CMakeLists.txt  basaltic_character.h  basaltic_components_actors.c  basaltic_components_actors.h  basaltic_components_planes.c  basaltic_components_planes.h  basaltic_components_wildlife.c  basaltic_components_wildlife.h  bc_components_common.c  bc_components_common.h  bc_components_elementals.c  bc_components_elementals.h  bc_components_tribes.c  bc_components_tribes.h
src/model/ecs/systems/: CMakeLists.txt  basaltic_character_systems.c  basaltic_character_systems.h  basaltic_terrain_systems.c  basaltic_terrain_systems.h  bc_elementals_systems.c  bc_elementals_systems.h  bc_systems_common.c  bc_systems_common.h  bc_systems_tribes.c  bc_systems_tribes.h
src/model/include/: basaltic_worldGen.h
src/view/: CMakeLists.txt  basaltic_editor.c  basaltic_editor.h  basaltic_interaction.c  basaltic_interaction.h  basaltic_render.c  basaltic_render.h  basaltic_sokol_gfx.c  basaltic_view.c  basaltic_view.h
src/view/ecs/: CMakeLists.txt  basaltic_components_view.c  basaltic_components_view.h  basaltic_phases_view.c  basaltic_phases_view.h  basaltic_systems_view.c  basaltic_systems_view.h
src/view/ecs/components/: CMakeLists.txt  components_input.c  components_input.h
src/view/ecs/systems/: CMakeLists.txt  basaltic_systems_view_debug.c  basaltic_systems_view_debug.h  basaltic_systems_view_terrain.c  bc_systems_view_input.c  bc_systems_view_input.h  systems_input.c  systems_input.h
src/view/include/: basaltic_sokol_gfx.h  basaltic_uniforms.h
src/view/rendering/: textRender.c  textRender.h
view/: CMakeLists.txt  basaltic_editor.c  basaltic_editor.h  basaltic_graphics.c  basaltic_graphics.h  basaltic_interaction.c  basaltic_interaction.h  basaltic_mesh.h  basaltic_render.c  basaltic_render.h  basaltic_sokol_gfx.c  basaltic_uiState.c  basaltic_uiState.h  basaltic_view.c  basaltic_view.h  ccVector.h  readme.md
view/ecs/: CMakeLists.txt  basaltic_components_view.c  basaltic_components_view.h  basaltic_phases_view.c  basaltic_phases_view.h  basaltic_systems_view.c  basaltic_systems_view.h
view/ecs/systems/: CMakeLists.txt  basaltic_systems_view_debug.c  basaltic_systems_view_debug.h  basaltic_systems_view_terrain.c  basaltic_systems_view_terrain.h
view/include/: basaltic_sokol_gfx.h
view/rendering/: CMakeLists.txt  debugRender.c  debugRender.h  hexmapRender.c  hexmapRender.h
view/shaders/: hexTerrain.frag  hexTerrain.vert  hexTerrainTextured.vert  uniforms.h
(+31 files in other folders)
